--- a/index.html
+++ b/index.html
@@ -1,57 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading Platform</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .navbar { background-color: #333; overflow: hidden; }
-        .navbar a { float: left; display: block; color: #f2f2f2; text-align: center; padding: 14px 16px; text-decoration: none; }
-        .navbar a:hover { background-color: #ddd; color: black; }
-        .main { padding: 20px; }
-        .footer { background-color: #333; color: white; text-align: center; padding: 10px; position: fixed; bottom: 0; width: 100%; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Basic Web Structure</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    /* Top Bar */
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #333;
+      color: white;
+      padding: 10px 20px;
+    }
+
+    .top-bar .shortcuts a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    /* Drawer Menu */
+    .drawer {
+      height: 100%;
+      width: 250px;
+      position: fixed;
+      top: 0;
+      left: -250px;
+      background-color: #222;
+      padding-top: 60px;
+      transition: 0.3s;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      padding: 10px 15px;
+      text-decoration: none;
+      font-size: 18px;
+      color: white;
+      display: block;
+      transition: 0.3s;
+    }
+
+    .drawer a:hover {
+      background-color: #444;
+    }
+
+    /* Main Content */
+    .main-content {
+      flex: 1;
+      padding: 20px;
+      margin-left: 0;
+      transition: 0.3s;
+    }
+
+    .main-content.shift {
+      margin-left: 250px;
+    }
+
+    /* Bottom Links */
+    .bottom-links {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+    }
+
+    .bottom-links a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    /* Copyright Section */
+    .copyright {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 10px;
+    }
+
+    /* Menu Toggle Button */
+    .menu-toggle {
+      font-size: 24px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-<div class="navbar">
-    <a href="#home">Home</a>
-    <a href="#markets">Markets</a>
-    <a href="#trade">Trade</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#login" style="float:right">Login/Sign Up</a>
-</div>
-
-<div class="main">
-    <h1>Welcome to Our Trading Platform</h1>
-    <p>Start trading with us today and take advantage of our competitive rates and extensive market access.</p>
-
-    <h2>Market Overview</h2>
-    <p>Here you can see the latest market trends and data.</p>
-    <!-- Placeholder for market data -->
-    <div id="market-data">
-        <p>Loading market data...</p>
+  <!-- Top Bar -->
+  <div class="top-bar">
+    <div class="menu-toggle" onclick="toggleDrawer()">&#9776;</div>
+    <div class="shortcuts">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     </div>
+  </div>
 
-    <h2>Trade</h2>
-    <form id="trade-form">
-        <label for="asset">Asset:</label>
-        <select id="asset" name="asset">
-            <option value="BTC">Bitcoin</option>
-            <option value="ETH">Ethereum</option>
-            <option value="LTC">Litecoin</option>
-        </select>
-        <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" min="0">
-        <button type="submit">Buy</button>
-        <button type="submit">Sell</button>
-    </form>
-</div>
+  <!-- Drawer Menu -->
+  <div class="drawer" id="drawer">
+    <a href="#">Dashboard</a>
+    <a href="#">Profile</a>
+    <a href="#">Settings</a>
+    <a href="#">Logout</a>
+  </div>
 
-<div class="footer">
-    <p>© 2025 Trading Platform. All rights reserved.</p>
-</div>
+  <!-- Main Content -->
+  <div class="main-content" id="mainContent">
+    <h1>Welcome to the Website</h1>
+    <p>This is the main content area.</p>
+  </div>
 
+  <!-- Bottom Links -->
+  <div class="bottom-links">
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms of Service</a>
+    <a href="#">FAQ</a>
+  </div>
+
+  <!-- Copyright Section -->
+  <div class="copyright">
+    &copy; 2025 Your Company. Made with ❤️.
+  </div>
+
+  <script>
+    function toggleDrawer() {
+      const drawer = document.getElementById("drawer");
+      const mainContent = document.getElementById("mainContent");
+      drawer.classList.toggle("open");
+      mainContent.classList.toggle("shift");
+    }
+  </script>
 </body>
 </html>
