--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basic Web Structure</title>
   <style>
+    /* General Styles */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -18,7 +19,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #333;
+      background: #333;
       color: white;
       padding: 10px 20px;
     }
@@ -31,12 +32,12 @@
 
     /* Drawer Menu */
     .drawer {
-      height: 100%;
       width: 250px;
+      height: 100%;
       position: fixed;
       top: 0;
       left: -250px;
-      background-color: #222;
+      background: #222;
       padding-top: 60px;
       transition: 0.3s;
     }
@@ -51,18 +52,24 @@
       font-size: 18px;
       color: white;
       display: block;
-      transition: 0.3s;
     }
 
     .drawer a:hover {
-      background-color: #444;
+      background: #444;
+    }
+
+    .drawer .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 24px;
+      cursor: pointer;
     }
 
     /* Main Content */
     .main-content {
       flex: 1;
       padding: 20px;
-      margin-left: 0;
       transition: 0.3s;
     }
 
@@ -72,7 +79,7 @@
 
     /* Bottom Links */
     .bottom-links {
-      background-color: #333;
+      background: #333;
       color: white;
       text-align: center;
       padding: 10px;
@@ -86,7 +93,7 @@
 
     /* Copyright Section */
     .copyright {
-      background-color: #222;
+      background: #222;
       color: white;
       text-align: center;
       padding: 10px;
@@ -113,6 +120,7 @@
 
   <!-- Drawer Menu -->
   <div class="drawer" id="drawer">
+    <div class="close-btn" onclick="toggleDrawer()">&times;</div>
     <a href="#">Dashboard</a>
     <a href="#">Profile</a>
     <a href="#">Settings</a>
