--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basic Web Structure</title>
+  <title>Home | Trade Hub</title>
   <style>
     /* General Styles */
     body {
@@ -121,9 +121,9 @@
   <!-- Drawer Menu -->
   <div class="drawer" id="drawer">
     <div class="close-btn" onclick="toggleDrawer()">&times;</div>
-    <a href="#">Dashboard</a>
-    <a href="#">Profile</a>
-    <a href="#">Settings</a>
+    <a href="#">Home</a>
+    <a href="#">Terms & conditions</a>
+    <a href="#">Charges & Fees</a>
     <a href="#">Logout</a>
   </div>
 
