--- a/fees.html
+++ b/fees.html
@@ -3,61 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fee Structure</title>
+    <title>Trading fees | StudioAs Inc.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
         }
         table {
             width: 100%;
             max-width: 600px;
             border-collapse: collapse;
-            margin: 0 auto;
+            margin: 20px auto;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         th, td {
-            padding: 10px;
+            padding: 15px;
             text-align: left;
             border: 1px solid #ddd;
+            font-size: 16px;
         }
         th {
             background-color: #f4f4f4;
+            color: #333;
+        }
+        td {
+            color: #555;
+        }
+        a.button {
+            display: inline-block;
+            text-align: center;
+            padding: 12px 25px;
+            background-color: royalblue;
+            color: #fff;
+            font-size: 16px;
+            text-decoration: none;
+            border-radius: 25px;
+            margin: 20px auto;
+            transition: background-color 0.3s ease;
+        }
+        a.button:hover {
+            background-color: darkblue;
         }
     </style>
 </head>
 <body>
 
-    <h1>Fee Structure</h1>
+    <h1>Trading fees</h1>
     <table>
         <thead>
             <tr>
-                <th>Fee Type</th>
-                <th>Fee (in USD or %)</th>
+                <th>Fees</th>
+                <th>Percentage</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Trading Fee</td>
+                <td>Trading fee (BNB)</td>
+                <td>0.075%</td>
+<tr>
+                <td>Trading fee (Spot)</td>
                 <td>0.10%</td>
             </tr>
-            <tr>
-                <td>Withdrawal Fee</td>
-                <td>Variable</td>
             </tr>
             <tr>
-                <td>Deposit Fee</td>
+                <td>Withdrawal fee</td>
+                <td>0.05 USDT</td>
+            </tr>
+            <tr>
+                <td>Deposit fee</td>
                 <td>0.00%</td>
             </tr>
             <tr>
-                <td>Futures Fee</td>
+                <td>Trading fee (Future)</td>
                 <td>0.02%</td>
             </tr>
-            <tr>
-                <td>Spot Trading Fee</td>
-                <td>0.10%</td>
-            </tr>
+            
         </tbody>
     </table>
+
+    <a href="https://studioasinc.github.io/trading/calcfee" class="button">Calculate Fees</a>
 
 </body>
 </html>
