--- a/fees.html
+++ b/fees.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trading fees | StudioAs Inc.</title>
+    <title>Trading fees | Binance | StudioAs Inc.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,7 +20,7 @@
             border-collapse: collapse;
             margin: 20px auto;
             background-color: #fff;
-            border-radius: 10px;
+            border-radius: 30px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         th, td {
