--- a/fees.html
+++ b/fees.html
@@ -20,7 +20,7 @@
             border-collapse: collapse;
             margin: 20px auto;
             background-color: #fff;
-            border-radius: 30px;
+            border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         th, td {
@@ -39,12 +39,12 @@
         a.button {
             display: inline-block;
             text-align: center;
-            padding: 12px 25px;
+            padding: 12px 30px;
             background-color: royalblue;
             color: #fff;
             font-size: 16px;
             text-decoration: none;
-            border-radius: 25px;
+            border-radius: 20px;
             margin: 20px auto;
             transition: background-color 0.3s ease;
         }
@@ -65,26 +65,25 @@
         </thead>
         <tbody>
             <tr>
-                <td>Trading fee (BNB)</td>
+                <td>Trading (BNB)</td>
                 <td>0.075%</td>
-<tr>
-                <td>Trading fee (Spot)</td>
-                <td>0.10%</td>
-            </tr>
             </tr>
             <tr>
-                <td>Withdrawal fee</td>
+                <td>Withdrawal</td>
                 <td>0.05 USDT</td>
             </tr>
             <tr>
-                <td>Deposit fee</td>
-                <td>0.00%</td>
+                <td>Trading (Spot)</td>
+                <td>0.1%</td>
             </tr>
             <tr>
-                <td>Trading fee (Future)</td>
-                <td>0.02%</td>
+                <td>Trading (Future)</td>
+                <td>%</td>
             </tr>
-            
+            <tr>
+                <td>Deposit</td>
+                <td>0%</td>
+            </tr>
         </tbody>
     </table>
 
