--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="close-btn" onclick="toggleDrawer()">&times;</div>
     <a href="#">Home</a>
     <a href="#">Terms & conditions</a>
-    <a href="/fees.html">Charges & Fees</a>
+    <a href="fees.html">Charges & Fees</a>
     <a href="#">Logout</a>
   </div>
 
