--- a/fees.html
+++ b/fees.html
@@ -70,7 +70,7 @@
             </tr>
             <tr>
                 <td>Withdrawal</td>
-                <td>0.05 USDT</td>
+                <td>0.05 USD</td>
             </tr>
             <tr>
                 <td>Trading (Spot)</td>
@@ -78,7 +78,7 @@
             </tr>
             <tr>
                 <td>Trading (Future)</td>
-                <td>%</td>
+                <td>0.02%</td>
             </tr>
             <tr>
                 <td>Deposit</td>
