--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
     <div class="menu-toggle" onclick="toggleDrawer()">&#9776;</div>
     <div class="shortcuts">
       <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="faq.html">FAQ</a>
+      <a href="https://linktr.ee/AshikisOnline">Contact</a>
     </div>
   </div>
 
   <!-- Drawer Menu -->
   <div class="drawer" id="drawer">
     <div class="close-btn" onclick="toggleDrawer()">&times;</div>
-    <a href="#">Home</a>
+    <a href="intro.html">Introduction</a>
     <a href="#">Terms & conditions</a>
     <a href="fees.html">Charges & Fees</a>
-    <a href="#">Logout</a>
+    <a href="#">Download App</a>
   </div>
 
   <!-- Main Content -->
