--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Home | Trade Hub</title>
   <style>
 .animated-gradient {
-    background: linear-gradient(90deg, #ff7e5f, #feb47b, #ff7e5f, #feb47b);
+    background: linear-gradient(90deg, #4683F0, royalblue, #D1667D, #4683F0);
     background-size: 300% 300%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: gradientAnimation 4s ease-in-out infinite;
+    animation: gradientAnimation 5s ease-in-out infinite;
 }
 
 @keyframes gradientAnimation {
