--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Home | Trade Hub</title>
   <style>
 .animated-gradient {
+    font-size: 1.5em; /* Increase the size of "TradeHUB" */
     background: linear-gradient(90deg, #4683F0, royalblue, #D1667D, #4683F0);
     background-size: 300% 300%;
     -webkit-background-clip: text;
@@ -155,10 +156,9 @@
   <!-- Main Content -->
 
   <div class="main-content" id="mainContent">
-    <h1>Welcome to <span class="animated-gradient">TradeHUB</span></h1>
+    <h1>Welcome to <br> <span class="animated-gradient">TradeHUB</span></h1>
     <p>This is the main content area.</p>
 </div>
-  
 
 
 
