--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Trade Hub</title>
+  <title>Home | TradeHub</title>
   <style>
 .animated-gradient {
     font-size: 1.5em; /* Increase the size of "TradeHUB" */
@@ -145,7 +145,7 @@
     <a href="intro.html">Introduction</a>
     <a href="#">Terms & conditions</a>
     <a href="fees.html">Charges & Fees</a>
-    <a href="#">Download App</a>
+    <a href="signup">Registration</a>
   </div>
 
 
