--- a/signup.html
+++ b/signup.html
@@ -225,7 +225,7 @@
           </div>
               <p class="mt-1.5 mb-6 text-sm text-gray-900">
       Already have an account?
-      <a href="/login?return_to=https%3A%2F%2Flottiefiles.com%2Fgetting-started">Login</a>
+      <a href="login">Login</a>
     </p>
 <br>
           <!-- Submit Button -->
