--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>Login | TradeHUB</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="next-head-count" content="2">
@@ -201,6 +202,7 @@
     </div>
 
     <form>
+<!-- This is a comment in HTML
       <div class="space-y-4">
         <div class="grid grid-cols-1 gap-3">
           <!-- First & Last Name -->
@@ -212,7 +214,7 @@
               <input type="text" placeholder="Last name" name="lastName" class="w-full p-2 border rounded-md" />
             </div>
           </div>
-
+-->
           <!-- Email -->
           <div class="relative">
             <input type="email" placeholder="Email" name="email" class="w-full p-2 border rounded-md" />
