--- a/login.html
+++ b/login.html
@@ -151,9 +151,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="text-3xl font-semibold text-gray-900">Create an account</h1>
+    <h1 class="text-3xl font-semibold text-gray-900">Login to your account</h1>
     <br>
-<p>We are not directly related with any 3rd party authentication company. We can only get your personal details that they provides.
+<p>Welcome back! Please enter your credentials to access your account.
 <br>
 <br>
 <br>
@@ -202,10 +202,10 @@
     </div>
 
     <form>
-<!-- This is a comment in HTML
       <div class="space-y-4">
+        <!-- Commented out First & Last Name -->
+        <!--
         <div class="grid grid-cols-1 gap-3">
-          <!-- First & Last Name -->
           <div class="grid grid-cols-2 gap-4">
             <div class="relative">
               <input type="text" placeholder="First name" name="firstName" class="w-full p-2 border rounded-md" />
@@ -214,7 +214,7 @@
               <input type="text" placeholder="Last name" name="lastName" class="w-full p-2 border rounded-md" />
             </div>
           </div>
--->
+        -->
           <!-- Email -->
           <div class="relative">
             <input type="email" placeholder="Email" name="email" class="w-full p-2 border rounded-md" />
@@ -225,20 +225,20 @@
             <input type="password" placeholder="Password" name="password" class="w-full p-2 border rounded-md" />
           </div>
               <p class="mt-1.5 mb-6 text-sm text-gray-900">
-      Already have an account?
-      <a href="/login?return_to=https%3A%2F%2Flottiefiles.com%2Fgetting-started">Login</a>
+      Don't have an account?
+      <a href="/signup">Sign up</a>
     </p>
 <br>
           <!-- Submit Button -->
           <div>
-            <button type="submit" class="submit-btn w-full p-2 bg-blue-500 text-white rounded-md font-bold">Create an account</button>
+            <button type="submit" class="submit-btn w-full p-2 bg-blue-500 text-white rounded-md font-bold">Login</button>
           </div>
         </div>
       </div>
     </form>
 
     <p class="mt-2 text-xs text-gray-900">
-      By continuing, you agree LottieFiles
+      By continuing, you agree to TradeHUB's
       <a href="https://studioasinc.github.io/trading/terms-and-conditions" target="_blank" rel="noreferrer">Terms of Service</a>
       and
       <a href="https://studioasinc.github.io/trading/privacy-policy" target="_blank" rel="noreferrer">Privacy Policy.</a>
@@ -277,4 +277,3 @@
   }
 </style>
 </html>
- 
