--- a/login.html
+++ b/login.html
@@ -227,7 +227,7 @@
 <br>
               <p class="mt-1.5 mb-6 text-sm text-gray-900">
       Don't have an account?
-      <a href="/signup">Sign up</a>
+      <a href="signup">Sign up</a>
     </p>
 <br>
           <!-- Submit Button -->
