--- a/login.html
+++ b/login.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Login | TradeHUB</title>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="next-head-count" content="2">
-  <style>
-    /* Your styles remain unchanged */
-  </style>
+  <title>Login Form</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1 class="text-3xl font-semibold text-gray-900">Login to your account</h1>
-    <p>Welcome back! Please enter your credentials to access your account.</p>
+  <h2>Login</h2>
+  <form id="loginForm">
+    <input type="email" id="email" placeholder="Email" required><br><br>
+    <input type="password" id="password" placeholder="Password" required><br><br>
+    <button type="submit">Login</button>
+  </form>
 
-    <!-- Third Party Options (remain unchanged) -->
-    <div class="flex justify-between space-x-4">
-      <!-- Google, Facebook, Dribbble, and Github buttons (remain unchanged) -->
-    </div>
-
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit" class="submit-btn">Login</button>
-    </form>
-  </div>
-
-  <!-- Supabase Script -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    // Initialize Supabase with the provided URL and API key
+    // Initialize Supabase
     const supabaseUrl = 'https://syourbtxpgbsxjelgola.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InN5b3VyYnR4cGdic3hqZWxnb2xhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2NDE0MzAsImV4cCI6MjA1ODIxNzQzMH0.Gsou_EKldDthWathOQokJaPhbFsoBg8eQH2tIFjXVaA';
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    // Login Function
-    const loginForm = document.getElementById('loginForm');
-    loginForm.addEventListener('submit', async (event) => {
-      event.preventDefault(); // Prevent form submission
+    document.getElementById('loginForm').addEventListener('submit', handleLogin);
 
+    async function handleLogin(event) {
+      event.preventDefault();
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
       try {
-        const { user, error } = await supabase.auth.signIn({
+        // Sign in with Supabase
+        const { data, error } = await supabase.auth.signInWithPassword({
           email: email,
-          password: password
+          password: password,
         });
 
         if (error) {
-          alert(error.message); // Show error message
+          // If there's an error during login, redirect to YouTube
+          console.error('Error during login:', error.message);
+          window.location.href = "https://www.youtube.com";
         } else {
-          alert('Logged in successfully!'); // Show success message
-          // Redirect to another page or perform other actions
+          // If login is successful, redirect to Google
+          window.location.href = "https://www.google.com";
         }
       } catch (error) {
-        console.error('Error logging in:', error);
+        console.error('Error during login:', error);
+        // Redirect to YouTube in case of any unexpected error
+        window.location.href = "https://www.youtube.com";
       }
-    });
+    }
   </script>
 </body>
 </html>
