--- a/our-goals.html
+++ b/our-goals.html
@@ -271,23 +271,23 @@
         <dl class="goals" id="goalsList">
             <div class="completed">
                 <dt><span>1. Initial Revenue Milestone</span></dt>
-                <dd>Achieve first $100 revenue within Q1</dd>
+                <dd>Achieve first $100 revenue within Q1 between financial 2025-2030</dd>
             </div>
             <div class="completed">
-                <dt><span>2. Recurring Income Stream</span></dt>
-                <dd>Establish $100 monthly recurring revenue</dd>
+                <dt><span>2. Make $100 in a month</span></dt>
+                <dd>Establish $100 monthly recurring revenue.</dd>
             </div>
             <div>
-                <dt><span>3. Professional Workstation</span></dt>
-                <dd>Acquire premium $700 laptop</dd>
+                <dt><span>3. Buy a Workstation</span></dt>
+                <dd>Purchase a high-end Laptop for work.</dd>
             </div>
             <div>
-                <dt><span>4. Mobile Technology</span></dt>
-                <dd>Upgrade to Samsung Galaxy S Ultra</dd>
+                <dt><span>4. Mobile Workstation</span></dt>
+                <dd>Upgrade to Samsung Galaxy S series Ultra/iPhone Pro Max series.</dd>
             </div>
             <div>
-                <dt><span>5. Flagship Computing</span></dt>
-                <dd>Build high-performance desktop</dd>
+                <dt><span>5. Get Powerful Desktop</span></dt>
+                <dd>Build high-performance desktop for work & gaming.</dd>
             </div>
             <div>
                 <dt><span>6. Spiritual Commitment</span></dt>
@@ -361,7 +361,7 @@
     
     <div class="footer-bottom"> -->
     <p>&copy; <span id="year"></span> All Rights Reserved by 
-        <a href="https://studioasinc.github.io/web" class="studio-link">StudioAs Inc.</a>
+        <a href="https://studioasinc.github.io/web" class="studio-link">StudioAs Inc.<br>Made with ❤️ by <a href="https://wa.me/8801792889067" class="studio-link">Ashik Ahmad</a></a>
     </p>
 </div>
 
