--- a/our-goals.html
+++ b/our-goals.html
@@ -262,8 +262,8 @@
 </head>
 <body>
     <header>
-        <h1 class="animated-gradient">Strategic Goals</h1>
-        <p class="subtitle">My personal development roadmap</p>
+        <h1 class="animated-gradient">Plans & Goals</h1>
+        <p class="subtitle">Our personal roadmap to success</p>
         <div class="subtitle-divider"></div>
     </header>
 
