--- a/our-goals.html
+++ b/our-goals.html
@@ -361,7 +361,7 @@
     
     <div class="footer-bottom"> -->
     <p>&copy; <span id="year"></span> All Rights Reserved by 
-        <a href="https://studioasinc.github.io/web" class="studio-link">StudioAs Inc.<br>Made with ❤️ by <a href="https://wa.me/8801792889067" class="studio-link">Ashik Ahmad</a></a>
+        <a href="https://studioasinc.github.io/web" class="studio-link">StudioAs Inc.</a><br><p>Made with ❤️ by</p> <a href="https://wa.me/8801792889067" class="studio-link">Ashik Ahmad</a></a>
     </p>
 </div>
 
