--- a/our-goals.html
+++ b/our-goals.html
@@ -128,20 +128,19 @@
         }
 
         /* Completed goal styling */
-        .completed dt span {
-            position: relative;
-        }
-
-        .completed dt span:after {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 55%;
-            width: 100%;
-            height: 2px;
-            background: #38ef7d;
-            transform: translateY(-50%);
-        }
+         /* Remove or comment out this entire rule */
+    /*
+    .completed dt span:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 55%;
+        width: 100%;
+        height: 2px;
+        background: #38ef7d;
+        transform: translateY(-50%);
+    }
+    */
 
         dt {
             font-size: 1.2rem;
