--- a/our-goals.html
+++ b/our-goals.html
@@ -312,7 +312,7 @@
     </div>
 
 <footer>
-    <div class="footer-content">
+<!--    <div class="footer-content">
         <div class="footer-section">
             <h3>Resources</h3>
             <ul>
@@ -322,6 +322,7 @@
             </ul>
         </div>
     </div>
+-->
 
     <div class="footer-bottom">
         <p>&copy; <span id="copyright-year">2025</span> All Rights Reserved by 
