--- a/fees.html
+++ b/fees.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trading fees | Binance | StudioAs Inc.</title>
     <style>
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 20px;
+    background-color: #f0f0f0;
+    padding: 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+  }
+  
+  nav a:hover {
+    color: #0066cc;
+  }
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -54,7 +73,16 @@
     </style>
 </head>
 <body>
-
+<header>
+    <nav>
+      <ul>
+        <li><a href="https://studioasinc.github.io/trading">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
     <h1>Trading fees</h1>
     <table>
         <thead>
